--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "bookmark",
+  "engines": {
+    "node": ">=22.14.0"
+  },
   "version": "0.0.1",
   "description": "",
   "author": "",
